crates/wbraster/dev/baselines/jpeg2000_step2_reference_trace_2026-04-20_rgb8x8.txt
warning: fields `encoded_codestream` and `uses_openjph_htj2k` are never read
   --> crates/wbjpeg2000/src/lib.rs:151:16
    |
147 | pub struct Image<'a> {
    |            ----- fields in this struct
...
151 |     pub(crate) encoded_codestream: &'a [u8],
    |                ^^^^^^^^^^^^^^^^^^
...
160 |     pub(crate) uses_openjph_htj2k: bool,
    |                ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `copy_raw_bitmap_to_u8` is never used
   --> crates/wbjpeg2000/src/lib.rs:379:4
    |
379 | fn copy_raw_bitmap_to_u8(raw: &RawBitmap, buf: &mut [u8]) {
    |    ^^^^^^^^^^^^^^^^^^^^^

warning: `wbjpeg2000` (lib) generated 2 warnings
warning: unused import: `wbraster::error::RasterError`
    --> crates/wbraster/tests/integration.rs:2069:9
     |
2069 |     use wbraster::error::RasterError;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `wbraster` (test "integration") generated 1 warning (run `cargo fix --test "integration" -p wbraster` to apply 1 suggestion)
    Finished `test` profile [optimized + debuginfo] target(s) in 0.07s
     Running unittests src/lib.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/wbraster-9ea1ef0c4ad085e8)

running 1 test
[decode_component] component=0 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[decode_component] component=1 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[decode_component] component=2 has_explicit_precincts=true num_layers=1 scod=0x01
[decode_component] -> taking decode_component_proper path
[packet_header_align] BEFORE: bit_pos=30 byte_pos=3 bit_offset=6
[packet_header_align] AFTER: byte_pos=4 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=613 byte_pos=76 bit_offset=5
[packet_header_align] AFTER: byte_pos=77 (segs.len=1)
[packet_header_align] BEFORE: bit_pos=1126 byte_pos=140 bit_offset=6
[packet_header_align] AFTER: byte_pos=141 (segs.len=1)
[bridge] Image dimensions: 8x8
[bridge] Color space: RGB
[bridge] Original bit depth: 16
[wbjpeg2000_accounting][segment_header] subband=LowLow comp=0 res=0 precinct=0 layer=0 cb=(0, 0) missing_bp=2 prev_passes=0 added_passes=43 cumulative_passes=43 lblock=3
[wbjpeg2000_accounting][segment_length] segment=0 coding_passes=43 length=69 lblock=3 cb=(0, 0)
[wbjpeg2000_accounting][segment_commit] layer_segments=Some(0..1) total_passes=43 non_empty_layers=1
[wbjpeg2000_accounting][bitplane_assemble] subband=LowLow cb=(0, 0) missing_bp=2 total_passes=43 combined_bytes=69 segment_ranges=[0] segment_coding_passes=[0]
[wbjpeg2000_accounting][bitplane_head] data_head=[11, 50, 54, AF, 86, F9, 0C, 15, 11, DE, 73, 6E, EF, 8D, 03, AE]
[wbjpeg2000_accounting][bitplane_assemble] subband=LowLow cb=(0, 0) missing_bp=9 total_passes=22 combined_bytes=60 segment_ranges=[0] segment_coding_passes=[0]
[wbjpeg2000_accounting][bitplane_head] data_head=[11, 50, 54, A6, F6, 2B, BB, 56, 8E, 76, 5D, D6, DA, 05, 01, F3]
[wbjpeg2000_accounting][bitplane_assemble] subband=LowLow cb=(0, 0) missing_bp=10 total_passes=19 combined_bytes=18 segment_ranges=[0] segment_coding_passes=[0]
[wbjpeg2000_accounting][bitplane_head] data_head=[11, 50, 54, AF, FC, 90, 88, 00, 00, 00, 18, 48, 45, 98, 40, C2]
[bridge] Raw dimensions: 8x8
[bridge] Raw bytes_per_sample: 2
[bridge] Raw num_components: 3
[bridge] Raw bit_depth: 16
[bridge] Raw data length: 384
[bridge] 16-bit path: first 10 pixels (component 0): [100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]
[bridge] 16-bit path: first 10 pixels after correction: [100, 100, 100, 100, 100, 100, 100, 100, 100, 100]
JPEG2000 differential summary: fixtures_total=1 multicomponent_fixtures=1 ok=0 native_error=0 native_unsupported_packet_header_markers=0 native_unsupported_poc=0 bridge_error=0 metadata_mismatch=0 sample_count_mismatch=0 sample_value_mismatch=1 multicomponent_native_error=0 multicomponent_bridge_error=0 multicomponent_metadata_mismatch=0 multicomponent_sample_count_mismatch=0 multicomponent_sample_value_mismatch=1
SAMPLE_VALUE_MISMATCH|tests/fixtures/rgb_8x8_lossless.jp2|idx=0 band=0 row=0 col=0 pixel=0 native=8192 bridge=100 abs_err=8092 eps=0
test formats::jpeg2000::differential_tests::jpeg2000_native_vs_bridge_differential_corpus ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 282 filtered out; finished in 0.00s

     Running tests/integration.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/integration-5f935e281ff4dbda)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 80 filtered out; finished in 0.00s

     Running tests/reprojection_parity.rs (/Users/johnlindsay/Documents/programming/Rust/whitebox_next_gen/target/debug/deps/reprojection_parity-623e1739416b87bb)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 2 filtered out; finished in 0.00s

